--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,body{
-  height: 100%;
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   border: 0;
@@ -8,18 +8,64 @@ html,body{
 
 body{
   background-image: url(https://i.redd.it/05tchax1u8ly.png);
+  background-repeat: no-repeat;
+}
+
+#wrrapper{
+  width: 100%;
+  height: 100%;
+
 }
 
 nav{
-  height: 5%;
+  height: 50px;
   width: 100%;
   background-color: #fff;
+  margin: 0;
+  padding: 0;
 }
 ul{
+  margin: 0;
+  padding: 0;
   list-style: none;
 
 }
 li{
   float: left;
-  text-align: center;
+  height: 100%;
+  margin-right: 35px;
+  line-height: 50px;
+
+  font-size: 25px;
+  color: #959595;
+
+}
+
+
+#nav-left{
+  margin-left: 35px;
+
+}
+
+
+#nav-right{
+  float: right;
+
+}
+
+.one-half{
+  width: 50%;
+  height: 95%;
+  float: left;
+
+}
+#text-left{
+  background-color: #e664f6;
+  opacity: 0.4;
+
+}
+#text-right{
+  background-color: #5cb2f9;
+  opacity: 0.4;
+
 }
